2007-11-12  Inge Wallin  <inge@lysator.liu.se>

	APIDOX
	* src/lib/geodata/data/GeoDataStyleSelector.h: Add APIDOX

2007-11-11  Inge Wallin  <inge@lysator.liu.se>

	Rename PlaceMarkModel --> MarblePlacemarkModel
	* PlaceMarkModel.h   -->  MarblePlacemarkModel.h
	* PlaceMarkModel.cpp -->  MarblePlacemarkModel.cpp
	* PlaceMarkModel_P.h -->  MarblePlacemarkModel_P.h
	* MarbleModel.{h,cpp},
	* MarbleWidget.cpp,
	* PlaceMarkManager.{h,cpp},
	* PlaceMarkLayout.cpp,
	* PlaceMarkPainter.cpp,
	* VisiblePlaceMark.{h,cpp},
	* PlaceMarkInfoDialog.cpp,
	* CMakeLists.txt: Reflect this namechange.

	APIDOX:
	* src/lib/MarbleWidget.h: More APIDOX

	Fix geodata classes according to KML spec and APIDOX:
	* src/lib/geodata/data/GeoDataFolder.h: (addFolder): removed
	(m_folderVector): removed
	(class GeoDataFolder): Added APIDOX.
	* src/lib/geodata/data/GeoDataFolder.cpp: (~GeoDataFolder): make
	empty
	(addFolder): removed
	* src/lib/geodata/data/GeoDataDocument.{h,cpp}: (class
	GeoDataDocument): Base on GeoDataContainer instead of GeoDataFolder
	(getStyle): renamed to style
	(folders): return QVector instead of QVector&
	(class GeoDataDocument): added APIDOX
	* src/lib/geodata/data/GeoDataContaner.h: Added APIDOX

	Make the GeoDataContainer follow the KML spec.
	* src/lib/geodata/data/GeoDataContainer.h (class
	GeoDataContainer): Contain GeoDataFeatures instead of
	GeoDataPlacemarks.
	* src/lib/geodata/data/GeoDataContainer.cpp: follow changes.

2007-11-09  Inge Wallin  <inge@lysator.liu.se>

	Fix documentation:
	* lib/geodata/data/GeoDataDocument.h,
	  lib/geodata/data/GeoDataContainer.h,
	  lib/geodata/data/GeoDataFeature.h:
	Reference GeoDataPlacemark
	
	Rename PlaceMark into Placemark
        * lib/geodata/data/GeoDataPlaceMark.h    -> GeoDataPlacemark.h
        * lib/geodata/data/GeoDataPlaceMark.cpp  -> GeoDataPlacemark.cpp
        * lib/CMakeLists.txt: Mirror namechange above
        * lib/MarbleWidgetPopupMenu.cpp,
          lib/PlaceMarkContainer.cpp,